@@ -4,27 +4,28 @@
 
 package play.db.jpa;
 
-import static org.hamcrest.CoreMatchers.*;
-import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
 import com.typesafe.config.Config;
 import com.typesafe.config.ConfigFactory;
 import jakarta.persistence.EntityManager;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExternalResource;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.*;
 import play.db.Database;
 import play.db.Databases;
 import play.db.jpa.DefaultJPAConfig.JPAConfigProvider;
 
-public class JPAApiTest {
+class JPAApiTest {
+  @RegisterExtension TestDatabaseExtension db = new TestDatabaseExtension();
 
-  @Rule public TestDatabase db = new TestDatabase();
+  @Test
+  void shouldWorkWithEmptyConfiguration() {
+    String configString = "";
+    Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
+    assertTrue(unitNames.isEmpty());
+  }
 
   private Set<String> getConfiguredPersistenceUnitNames(String configString) {
     Config overrides = ConfigFactory.parseString(configString);
@@ -34,61 +35,52 @@ public class JPAApiTest {
   }
 
   @Test
-  public void shouldWorkWithEmptyConfiguration() {
-    String configString = "";
-    Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
-    assertThat(unitNames, equalTo(Collections.emptySet()));
-  }
-
-  @Test
-  public void shouldWorkWithSingleValue() {
+  void shouldWorkWithSingleValue() {
     String configString = "jpa.default = defaultPersistenceUnit";
     Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
-    assertThat(unitNames, equalTo(new HashSet<>(Arrays.asList("defaultPersistenceUnit"))));
+    assertEquals(unitNames, new HashSet<>(List.of("defaultPersistenceUnit")));
   }
 
   @Test
-  public void shouldWorkWithMultipleValues() {
+  void shouldWorkWithMultipleValues() {
     String configString = "jpa.default = defaultPersistenceUnit\n" + "jpa.number2 = number2Unit";
     Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
-    assertThat(
-        unitNames, equalTo(new HashSet<>(Arrays.asList("defaultPersistenceUnit", "number2Unit"))));
+    assertEquals(unitNames, new HashSet<>(Arrays.asList("defaultPersistenceUnit", "number2Unit")));
   }
 
   @Test
-  public void shouldWorkWithEmptyConfigurationAtConfiguredLocation() {
+  void shouldWorkWithEmptyConfigurationAtConfiguredLocation() {
     String configString = "play.jpa.config = myconfig.jpa";
     Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
-    assertThat(unitNames, equalTo(Collections.emptySet()));
+    assertTrue(unitNames.isEmpty());
   }
 
   @Test
-  public void shouldWorkWithSingleValueAtConfiguredLocation() {
+  void shouldWorkWithSingleValueAtConfiguredLocation() {
     String configString =
         "play.jpa.config = myconfig.jpa\n" + "myconfig.jpa.default = defaultPersistenceUnit";
     Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
-    assertThat(unitNames, equalTo(new HashSet<>(Arrays.asList("defaultPersistenceUnit"))));
+    assertEquals(new HashSet<>(List.of("defaultPersistenceUnit")), unitNames);
   }
 
   @Test
-  public void shouldWorkWithMultipleValuesAtConfiguredLocation() {
+  void shouldWorkWithMultipleValuesAtConfiguredLocation() {
     String configString =
         "play.jpa.config = myconfig.jpa\n"
             + "myconfig.jpa.default = defaultPersistenceUnit\n"
             + "myconfig.jpa.number2 = number2Unit";
     Set<String> unitNames = getConfiguredPersistenceUnitNames(configString);
-    assertThat(
-        unitNames, equalTo(new HashSet<>(Arrays.asList("defaultPersistenceUnit", "number2Unit"))));
+    assertEquals(unitNames, new HashSet<>(Arrays.asList("defaultPersistenceUnit", "number2Unit")));
   }
 
   @Test
-  public void shouldBeAbleToGetAnEntityManagerWithAGivenName() {
+  void shouldBeAbleToGetAnEntityManagerWithAGivenName() {
     EntityManager em = db.jpa.em("default");
-    assertThat(em, notNullValue());
+    assertNotNull(em);
   }
 
   @Test
-  public void shouldExecuteAFunctionBlockUsingAEntityManager() {
+  void shouldExecuteAFunctionBlockUsingAEntityManager() {
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = createTestEntity();
@@ -99,42 +91,7 @@ public class JPAApiTest {
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = TestEntity.find(1L, entityManager);
-          assertThat(entity.name, equalTo("alice"));
-        });
-  }
-
-  @Test
-  public void shouldExecuteAFunctionBlockUsingASpecificNamedEntityManager() {
-    db.jpa.withTransaction(
-        "default",
-        entityManager -> {
-          TestEntity entity = createTestEntity();
-          entityManager.persist(entity);
-          return entity;
-        });
-
-    db.jpa.withTransaction(
-        entityManager -> {
-          TestEntity entity = TestEntity.find(1L, entityManager);
-          assertThat(entity.name, equalTo("alice"));
-        });
-  }
-
-  @Test
-  public void shouldExecuteAFunctionBlockAsAReadOnlyTransaction() {
-    db.jpa.withTransaction(
-        "default",
-        true,
-        entityManager -> {
-          TestEntity entity = createTestEntity();
-          entityManager.persist(entity);
-          return entity;
-        });
-
-    db.jpa.withTransaction(
-        entityManager -> {
-          TestEntity entity = TestEntity.find(1L, entityManager);
-          assertThat(entity, nullValue());
+          assertEquals("alice", entity.name);
         });
   }
 
@@ -150,7 +107,42 @@ public class JPAApiTest {
   }
 
   @Test
-  public void shouldExecuteASupplierBlockInsideATransaction() throws Exception {
+  void shouldExecuteAFunctionBlockUsingASpecificNamedEntityManager() {
+    db.jpa.withTransaction(
+        "default",
+        entityManager -> {
+          TestEntity entity = createTestEntity();
+          entityManager.persist(entity);
+          return entity;
+        });
+
+    db.jpa.withTransaction(
+        entityManager -> {
+          TestEntity entity = TestEntity.find(1L, entityManager);
+          assertEquals("alice", entity.name);
+        });
+  }
+
+  @Test
+  void shouldExecuteAFunctionBlockAsAReadOnlyTransaction() {
+    db.jpa.withTransaction(
+        "default",
+        true,
+        entityManager -> {
+          TestEntity entity = createTestEntity();
+          entityManager.persist(entity);
+          return entity;
+        });
+
+    db.jpa.withTransaction(
+        entityManager -> {
+          TestEntity entity = TestEntity.find(1L, entityManager);
+          assertNull(entity);
+        });
+  }
+
+  @Test
+  void shouldExecuteASupplierBlockInsideATransaction() throws Exception {
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = createTestEntity();
@@ -160,12 +152,12 @@ public class JPAApiTest {
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = TestEntity.find(1L, entityManager);
-          assertThat(entity.name, equalTo("alice"));
+          assertEquals("alice", entity.name);
         });
   }
 
   @Test
-  public void shouldNestTransactions() {
+  void shouldNestTransactions() {
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = new TestEntity();
@@ -176,17 +168,17 @@ public class JPAApiTest {
           db.jpa.withTransaction(
               entityManagerInner -> {
                 TestEntity entity2 = TestEntity.find(2L, entityManagerInner);
-                assertThat(entity2, nullValue());
+                assertNull(entity2);
               });
 
           // Verify that we can still access the EntityManager
           TestEntity entity3 = TestEntity.find(2L, entityManager);
-          assertThat(entity3, equalTo(entity));
+          assertEquals(entity, entity3);
         });
   }
 
   @Test
-  public void shouldRollbackInnerTransactionOnly() {
+  void shouldRollbackInnerTransactionOnly() {
     db.jpa.withTransaction(
         entityManager -> {
           // Parent transaction creates entity 2
@@ -204,21 +196,21 @@ public class JPAApiTest {
 
           // Verify that we can still access the EntityManager
           TestEntity entity3 = TestEntity.find(2L, entityManager);
-          assertThat(entity3, equalTo(entity));
+          assertEquals(entity, entity3);
         });
 
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = TestEntity.find(3L, entityManager);
-          assertThat(entity, nullValue());
+          assertNull(entity);
 
           TestEntity entity2 = TestEntity.find(2L, entityManager);
-          assertThat(entity2.name, equalTo("alice"));
+          assertEquals("alice", entity2.name);
         });
   }
 
   @Test
-  public void shouldRollbackOuterTransactionOnly() {
+  void shouldRollbackOuterTransactionOnly() {
     db.jpa.withTransaction(
         entityManager -> {
           // Parent transaction creates entity 2, but rolls back
@@ -234,7 +226,7 @@ public class JPAApiTest {
 
           // Verify that we can still access the EntityManager
           TestEntity entity3 = TestEntity.find(2L, entityManager);
-          assertThat(entity3, equalTo(entity));
+          assertEquals(entity, entity3);
 
           entityManager.getTransaction().setRollbackOnly();
         });
@@ -242,14 +234,14 @@ public class JPAApiTest {
     db.jpa.withTransaction(
         entityManager -> {
           TestEntity entity = TestEntity.find(3L, entityManager);
-          assertThat(entity.name, equalTo("alice"));
+          assertEquals("alice", entity.name);
 
           TestEntity entity2 = TestEntity.find(2L, entityManager);
-          assertThat(entity2, nullValue());
+          assertNull(entity2);
         });
   }
 
-  public static class TestDatabase extends ExternalResource {
+  public static class TestDatabaseExtension implements BeforeEachCallback, AfterEachCallback {
     Database database;
     JPAApi jpa;
 
@@ -261,16 +253,16 @@ public class JPAApiTest {
     }
 
     @Override
-    public void before() {
-      database = Databases.inMemoryWith("jndiName", "DefaultDS");
-      execute("create table TestEntity (id bigint not null, name varchar(255));");
-      jpa = new DefaultJPAApi(DefaultJPAConfig.of("default", "defaultPersistenceUnit")).start();
+    public void afterEach(ExtensionContext context) throws Exception {
+      jpa.shutdown();
+      database.shutdown();
     }
 
     @Override
-    public void after() {
-      jpa.shutdown();
-      database.shutdown();
+    public void beforeEach(ExtensionContext context) throws Exception {
+      database = Databases.inMemoryWith("jndiName", "DefaultDS");
+      execute("create table TestEntity (id bigint not null, name varchar(255));");
+      jpa = new DefaultJPAApi(DefaultJPAConfig.of("default", "defaultPersistenceUnit")).start();
     }
   }
 }
